# PlexSpaces

./: .dockerignore  .gitignore  Cargo.toml  Cargo_main.toml  Dockerfile  Dockerfile.firecracker-test  Dockerfile.hybrid  Dockerfile.sqlite  Makefile  README.md  buf.gen.docs.yaml  buf.gen.yaml  buf.yaml  build.rs  docker-compose.aws-local.README.md  docker-compose.aws-local.yml  docker-compose.dev.yml  docker-compose.firecracker-test.yml  docker-compose.yml
crates/actor/: Cargo.toml  README.md
crates/actor-service/: Cargo.toml  README.md
crates/actor-service/src/: get_or_activate_impl.rs  lib.rs
crates/actor-service/tests/: actor_service_spawn_tests.rs  get_or_activate_actor_tests.rs  integration_tests.rs  invoke_actor_tests.rs
crates/actor/src/: actor_factory.rs  actor_factory_impl.rs  actor_ref.rs  actor_ref_ttl_tests.rs  builder.rs  lib.rs  mod.rs  regular_actor_wrapper.rs  resource.rs  service_locator_helpers.rs  virtual_actor_wrapper.rs
crates/actor/tests/: actor_builder_wasm_firecracker_tests.rs  actor_factory_impl_tests.rs  actor_factory_no_register_local_tests.rs  actor_ref_service_locator_tests.rs  actor_state_conversion_tests.rs  ask_pattern_tests.rs  integration_actor_ref_grpc.rs  integration_actor_ref_grpc_comprehensive_tests.rs  integration_actor_ref_grpc_unified.rs  integration_temporary_sender_pattern_tests.rs  lifecycle_comprehensive_tests.rs  lifecycle_edge_cases_tests.rs  lifecycle_hooks_tests.rs  lifecycle_observability_tests.rs  registration_reliability_tests.rs  ttl_support_tests.rs  unified_lifecycle_tests.rs
crates/behavior/: Cargo.toml  README.md
crates/behavior/src/: genevent_tests.rs  genfsm_tests.rs  genserver_tests.rs  lib.rs  mod.rs  simplified.rs  workflow.rs
crates/blob/: Cargo.toml  README.md
crates/blob/migrations/: 001_blob_metadata.sql
crates/blob/src/: config.rs  config_ext.rs  error.rs  helpers.rs  lib.rs  presigned.rs  repository.rs  service.rs
crates/blob/tests/: config_tests.rs  ddb_repository_integration_tests.rs  error_tests.rs  helpers_tests.rs  http_handler_tests.rs  integration_tests.rs  repository_tests.rs  service_tests.rs
crates/channel/: Cargo.toml  README.md  docker-compose.yml
crates/channel/src/: channel.rs  in_memory.rs  kafka_backend.rs  lib.rs  mock_backend.rs  nats_backend.rs  observability.rs  redis_backend.rs  sqlite_backend.rs  sqs_backend.rs  udp_backend.rs
crates/channel/tests/: ack_nack_integration_test.rs  docker-compose.test.yml  kafka_integration_test.rs  nats_integration_test.rs  redis_integration_test.rs  shutdown_restart_test.rs  sqlite_shutdown_resume_test.rs  sqs_integration.rs  udp_integration_test.rs
crates/circuit-breaker/: Cargo.toml  README.md
crates/circuit-breaker/src/: circuit_breaker.rs  lib.rs
crates/cli/: Cargo.toml  README.md
crates/cli/src/: actor.rs  application.rs  firecracker.rs  main.rs  node.rs
crates/common/: Cargo.toml
crates/common/src/: aws_config.rs  lib.rs  request_context.rs  test_helpers.rs
crates/core/: Cargo.toml  README.md
crates/core/src/: actor_context.rs  actor_registry.rs  actor_trait.rs  application.rs  application_manager.rs  behavior_factory.rs  exit_reason.rs  facet_manager.rs  facet_service_wrapper.rs  lib.rs  message_metrics.rs  monitoring.rs  object_registry_helpers.rs  patterns.rs  reply_waiter.rs  request_context.rs  service_locator.rs  service_wrappers.rs  virtual_actor_manager.rs
crates/core/tests/: actor_context_channel_service_tests.rs  actor_context_channel_service_timeout_none_tests.rs  actor_context_direct_service_tests.rs  actor_context_integration_tests.rs  actor_context_methods_tests.rs  actor_context_minimal_tests.rs  actor_context_new_tests.rs  actor_context_process_group_convenience_tests.rs  actor_context_reply_tests.rs  actor_context_tenant_id_tests.rs  actor_context_tests.rs  actor_error_comprehensive_tests.rs  actor_ref_ask_oneshot_channel_tests.rs  actor_ref_comprehensive_tests.rs  actor_ref_tests.rs  actor_registry_no_mailbox_exposure_tests.rs  actor_registry_parent_child_tests.rs  application_comprehensive_tests.rs  application_tests.rs  behavior_context_tests.rs  channel_service_tests.rs  exit_reason_comprehensive_tests.rs  exit_reason_tests.rs  link_monitor_comprehensive_tests.rs  object_registry_helpers_integration_tests.rs  process_group_service_tests.rs  remote_actor_ref.rs  reply_waiter_tests.rs  service_wrappers_comprehensive_tests.rs  service_wrappers_tests.rs  stub_services_tests.rs
crates/dashboard/: Cargo.toml  README.md
crates/dashboard/src/: dashboard_handlers.rs  dashboard_service.rs  lib.rs
crates/dashboard/static/: dashboard.css  dashboard.js
crates/dashboard/tests/: README.md  dashboard_actors_by_type_tests.rs  dashboard_comprehensive_tests.rs  dashboard_integration_tests.rs  dashboard_service_tests.rs  dashboard_wasm_deployment_with_actors_tests.rs
crates/elastic-pool/: Cargo.toml  README.md
crates/elastic-pool/src/: elastic_pool.rs  lib.rs
crates/facet/: Cargo.toml  README.md
crates/facet/src/: event_emitter.rs  facet_manager.rs  lib.rs  mod.rs
crates/facet/tests/: facet_exit_down_tests.rs  keyvalue_ddb_tests.rs
crates/firecracker/: Cargo.toml  README.md
crates/firecracker/src/: api_client.rs  application_deployment.rs  config.rs  error.rs  health.rs  lib.rs  network.rs  supervisor.rs  vm.rs  vm_registry.rs
crates/firecracker/tests/: api_client_unit_tests.rs  (+8 more)
crates/grpc-middleware/: Cargo.toml  README.md
crates/journaling/: Cargo.toml  README.md
crates/keyvalue/: Cargo.toml  README.md
crates/lattice/: Cargo.toml  README.md
crates/locks/: Cargo.toml  README.md
crates/mailbox/: Cargo.toml  README.md
crates/node/: Cargo.toml  README.md  build.rs
crates/object-registry/: Cargo.toml  README.md
crates/persistence/: Cargo.toml  README.md
crates/process-groups/: Cargo.toml  README.md
crates/proto/: Cargo.toml  README.md  build.rs
crates/scheduler/: Cargo.toml  README.md
crates/supervisor/: Cargo.toml  README.md
crates/tuplespace/: Cargo.toml  README.md
crates/tuplespace-service/: Cargo.toml  README.md
crates/wasm-runtime/: Cargo.toml  README.md
(+962 files in other folders)
