[package]
name = "plexspaces-channel"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Extensible channel/queue abstraction for PlexSpaces microservices"

[dependencies]
# Channel depends on proto for message definitions
plexspaces-proto = { workspace = true }

# Core dependencies
tokio = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
ulid = { version = "1.1", features = ["serde"] }

# Proto conversion
prost = { workspace = true }
prost-types = { workspace = true }
chrono = { workspace = true }

# For InMemory backend (MPSC channels)
futures = { workspace = true }
async-stream = { workspace = true }

# Optional: Redis backend (feature-gated)
redis = { workspace = true, optional = true }

# Optional: Kafka backend (feature-gated)
rdkafka = { version = "0.36", optional = true }

# Optional: NATS backend (feature-gated)
async-nats = { version = "0.45", optional = true }

# Optional: SQLite backend (feature-gated, for testing durability)
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "sqlite", "migrate"], optional = true }

[dev-dependencies]
tokio-test = { version = "0.4" }
pretty_assertions = { version = "1.4" }
tempfile = { workspace = true }

[features]
default = []
redis-backend = ["redis"]
kafka-backend = ["rdkafka"]
nats-backend = ["async-nats"]
sqlite-backend = ["sqlx"]

[lib]
name = "plexspaces_channel"
path = "src/lib.rs"
