[package]
name = "plexspaces-circuit-breaker"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Circuit breaker pattern for fault tolerance in PlexSpaces"

[dependencies]
# PlexSpaces crates
plexspaces-proto = { workspace = true }

# Async runtime
tokio = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }

# gRPC
tonic = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }

# Utilities
uuid = { workspace = true }
ulid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
