[package]
name = "plexspaces-cli"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "CLI tool for PlexSpaces framework management"

[dependencies]
plexspaces-proto = { workspace = true }
plexspaces-firecracker = { workspace = true, optional = true }
plexspaces-node = { workspace = true }
tonic = { workspace = true }
tokio = { workspace = true }
clap = { version = "4.4", features = ["derive"] }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = "1.0"
bytes = "1.5"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[[bin]]
name = "plexspaces"
path = "src/main.rs"

[features]
default = []
firecracker = ["plexspaces-node/firecracker", "dep:plexspaces-firecracker"]
