# SPDX-License-Identifier: LGPL-2.1-or-later

[package]
name = "plexspaces-grpc-middleware"
version = "0.1.0"
edition = "2021"
license = "LGPL-2.1-or-later"
description = "Production-ready gRPC middleware for PlexSpaces with metrics, auth, rate limiting, and tracing"

[lib]
name = "plexspaces_grpc_middleware"
path = "src/lib.rs"

[dependencies]
plexspaces-proto = { path = "../proto" }

# gRPC
tonic = "0.12"
tower = { version = "0.5", features = ["util"] }
tower-layer = "0.3"

# Async
tokio = { version = "1.42", features = ["full"] }
async-trait = "0.1"

# Metrics
prometheus = { version = "0.13", features = ["process"] }
lazy_static = "1.5"

# Tracing
tracing = "0.1"
tracing-opentelemetry = "0.27"
opentelemetry = { version = "0.27", features = ["trace", "metrics"] }
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio"] }

# Auth
jsonwebtoken = "9.3"

# Rate limiting
governor = "0.6"

# Compression
flate2 = "1.0"  # gzip
zstd = "0.13"   # zstd

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Time
chrono = "0.4"

# ID generation
ulid = { version = "1.1", features = ["serde"] }

[dev-dependencies]
tokio-test = "0.4"
hyper = "1.0"
