[package]
name = "plexspaces-lattice"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
description = "CRDT lattice implementations for PlexSpaces"

[dependencies]
# Note: Lattice has NO dependencies on other PlexSpaces modules!
# It's completely independent - only uses standard Rust types

# Core dependencies
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tokio-test = { version = "0.4" }
pretty_assertions = { version = "1.4" }

[lib]
name = "plexspaces_lattice"
path = "src/lib.rs"
